--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,16 @@
       "type": "image/x-icon"
     },
     {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192*192",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-512*512.png",
+      "sizes": "512*512",
+      "type": "image/png"
+    },
+    {
       "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
