--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "android-chrome-192x192.png",
+      "sizes": "192*192",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "android-chrome-512*512.png",
+      "sizes": "512*512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
